[gd_scene load_steps=6 format=2]

[ext_resource path="res://IgnisRegularLevel/torch.png" type="Texture" id=1]
[ext_resource path="res://IgnisRegularLevel/torchOff.png" type="Texture" id=2]
[ext_resource path="res://IgnisRegularInner/Light2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://IgnisRegularLevel/IgnisRegularLevel.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[node name="Area2D" type="Area2D"]
script = ExtResource( 4 )

[node name="Light2D" parent="." instance=ExtResource( 3 )]

[node name="SpriteTorchOn" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="SpriteTorchOff" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.4, 6 )
shape = SubResource( 1 )
